[package]
name = "git-hierarchy"
version = "0.1.0"
edition = "2024"

[lib]
name = "git_hierarchy"
path = "src/lib.rs"


[[bin]]
name = "git-walk-down"
path = "src/bin/git-walk-down.rs"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
derive = "1.0.0"
git2 = "0.20.2"
log = { version = "0.4.27", features = ["std"] }
stderrlog = "0.6.0"
tracing = { version = "0.1.41" }

tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
