[package]
name = "git-hierarchy"
version = "0.1.0"
edition = "2024"

[lib]
name = "git_hierarchy"
path = "src/lib.rs"


[[bin]]
name = "git-walk-down"
path = "src/bin/git-walk-down.rs"

[[bin]]
name = "git-rebase-poset"
path = "src/bin/rebase/main.rs"

[[bin]]
name = "git-segment"
path = "src/bin/git-segment.rs"

[dependencies]
clap = {version = "4.5.50", features = ["derive"] }
derive = "1.0.0"
git2 = "0.20.2"
log = { version = "0.4.28", features = ["std"] }
stderrlog = "0.6.0"
tracing = { version = "0.1.41" }

tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

petgraph = "0.8.3"
# discover-graph = {path = "../discover-graph/"}
discover-graph = {path = "submodules/discover-graph/"}
