[package]
name = "git-hierarchy"
version = "0.1.0"
edition = "2024"

authors = ["Michal Maruska <mmaruska@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to rebase a hierarchy of local development commits"
readme = "readme.md"
homepage = "https://github.com/MichalMaruska/git-hierarchy-rust"
repository = "https://github.com/MichalMaruska/git-hierarchy-rust"
keywords = ["cli", "git"]
categories = ["command-line-utilities"]


[lib]
name = "git_hierarchy"
path = "src/lib.rs"


[[bin]]
name = "git-walk-down"
path = "src/bin/git-walk-down.rs"

[[bin]]
name = "git-rebase-poset"
path = "src/bin/rebase/main.rs"

[[bin]]
name = "git-rebase-segment"
path = "src/bin/git-rebase-segment.rs"

[[bin]]
name = "git-segment"
path = "src/bin/git-segment.rs"

[[bin]]
name = "git-sum"
path = "src/bin/git-sum.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
# path = "/home/michal/git/clap/",
# , "debug" to have the debug!() macros active
clap-verbosity-flag = {version = "3.0.4", features = ["tracing"] }

derive = "1.0.0"
git2 = "0.20.3"
stderrlog = "0.6.0"
tracing = { version = "0.1.43" }

tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

petgraph = "0.8.3"
# discover-graph = {path = "../discover-graph/"}
discover-graph = {path = "submodules/discover-graph/"}
colored = "3.0.0"

# This tells Cargo to use a local version of `some-crate`
# instead of the one from crates.io.
[patch.crates-io]
clap =  { path = "/home/michal/git/clap/", features = ["derive"] }

